--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@ Implementation of Patient Reported Outcome Measures
 
 Integration of MRI in Radiation Therapy</p></div></div></div><div class="featured"><h2 class="section textColor">
               Resume
-            </h2> <div><div class="media document" style="background-color: rgb(23, 169, 167);"><!----> <!----> <div class="mediaC"><div><img src="./media/kenny_zhan's_resume_(jul_2023).jpeg" alt="Kenny Zhan's Resume"></div> <div class="controls cardColor"><p class="title">
+            </h2> <div><div class="media document" style="background-color: rgb(23, 169, 167);"><!----> <!----> <div class="mediaC"><div><img src="./media/Resume_pic.jpg" alt="Kenny Zhan's Resume"></div> <div class="controls cardColor"><p class="title">
       Kenny Zhan's Resume
     </p> <div class="docDl"><p class="fileSize sub">PDF - 56.65 KB</p> <a href="./media/Kenny_Zhan_Resume_(2025).pdf" download="" target="_blank" class="dlBtn" style="background-color: rgb(23, 169, 167);"><div class="icon iconColor"><svg viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg" xml:space="preserve" style="fill-rule:evenodd;clip-rule:evenodd;stroke-linecap:round;stroke-linejoin:round;stroke-miterlimit:2"><path style="fill:none" d="M0 0h24v24H0z"></path><path d="M21 15v4c0 1.097-.903 2-2 2H5c-1.097 0-2-.903-2-2v-4m4-5 5 5 5-5m-5 5V3" style="fill:none;fill-rule:nonzero;stroke:#fff;stroke-width:2px"></path></svg></div></a></div></div></div></div></div></div></main> <footer class="textColor" style="background-color: rgb(31, 98, 132);">
           Created with
